fix: set min-width for admin ui sidebar and fix hiding texts on mobile viewport (#1322)

--- a/admin-ui/src/styles/NavBar.css
+++ b/admin-ui/src/styles/NavBar.css
@@ -1,5 +1,6 @@
 .navbar-brand {
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
+  min-width: 50px;
 }
 
 .navbar-brand > img {
